// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runPerformanceTest 1`] = `
Object {
  "benchmark": undefined,
  "result": Object {
    "value": Object {
      "metrics": Object {
        "load": 321,
        "pageWeight": 1000,
        "speedIndex": 10,
        "timeToFirstByte": 123,
      },
    },
  },
  "sessionId": "foobarSession",
  "userAgent": undefined,
}
`;

exports[`runPerformanceTest 2`] = `
Array [
  Array [
    Object {
      "capabilities": Object {
        "browserName": "chrome",
        "browserVersion": 123,
        "goog:chromeOptions": Object {
          "w3c": true,
        },
        "platformName": "Playstation",
        "sauce:options": Object {
          "build": "buildname",
          "capturePerformance": true,
          "crmuxdriverVersion": "beta",
          "extendedDebugging": true,
          "name": "testname",
          "seleniumVersion": "3.141.59",
          "tunnelIdentifier": "foobar",
        },
      },
      "key": "mykey",
      "logLevel": "trace",
      "outputDir": "/some/dir",
      "region": "eu",
      "user": "myuser",
    },
  ],
]
`;

exports[`runPerformanceTest w/ parentTunnel 1`] = `
Object {
  "benchmark": undefined,
  "result": Object {
    "value": Object {
      "metrics": Object {
        "load": 321,
        "pageWeight": 1000,
        "speedIndex": 10,
        "timeToFirstByte": 123,
      },
    },
  },
  "sessionId": "foobarSession",
  "userAgent": undefined,
}
`;

exports[`runPerformanceTest w/ parentTunnel 2`] = `
Array [
  Array [
    Object {
      "capabilities": Object {
        "browserName": "chrome",
        "browserVersion": 123,
        "goog:chromeOptions": Object {
          "w3c": true,
        },
        "platformName": "Playstation",
        "sauce:options": Object {
          "build": "buildname",
          "capturePerformance": true,
          "crmuxdriverVersion": "beta",
          "extendedDebugging": true,
          "name": "testname",
          "parentTunnel": "foobaz",
          "seleniumVersion": "3.141.59",
          "tunnelIdentifier": "foobar",
        },
      },
      "key": "mykey",
      "logLevel": "trace",
      "outputDir": "/some/dir",
      "region": "eu",
      "user": "myuser",
    },
  ],
]
`;

exports[`runPerformanceTest without args 1`] = `
Object {
  "benchmark": undefined,
  "result": Object {
    "value": Object {
      "metrics": Object {
        "load": 321,
        "pageWeight": 1000,
        "speedIndex": 10,
        "timeToFirstByte": 123,
      },
    },
  },
  "sessionId": "foobarSession",
  "userAgent": undefined,
}
`;

exports[`runPerformanceTest without args 2`] = `
Array [
  Array [
    Object {
      "capabilities": Object {
        "browserName": "chrome",
        "browserVersion": undefined,
        "goog:chromeOptions": Object {
          "w3c": true,
        },
        "platformName": undefined,
        "sauce:options": Object {
          "build": "buildname",
          "capturePerformance": true,
          "crmuxdriverVersion": "beta",
          "extendedDebugging": true,
          "name": "testname",
          "seleniumVersion": "3.141.59",
        },
      },
      "key": "mykey",
      "logLevel": "trace",
      "outputDir": "/some/dir",
      "region": undefined,
      "user": "myuser",
    },
  ],
]
`;
